--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
   --tertiary-text-color: #ffffff;
   --accent-color: #2196f3;
 }
+
 /* .font-family: "Raleway", sans-serif;
 .font-family: "Roboto", sans-serif; */
 
@@ -12,10 +13,15 @@ body {
   background-color: #ffffff;
   color: var(--primary-text-color);
   font-family: "Roboto", sans-serif;
+
 }
+
 .list {
   list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
+
 .link {
   text-decoration: none;
 }
@@ -30,23 +36,21 @@ body {
 /* #F5F4FA цвет фона секции "наша команда" и кнопки фильтров */
 /* rgba(255, 255, 255, 0.6) цвет e-mail и номера телефона футер */
 
-/* Контейнер */
 .container {
   width: 1200px;
   padding-left: 15px;
   padding-right: 15px;
-  /* margin-left auto;
-     margin-right auto; */
   margin: 0 auto;
   outline: 2px solid tomato;
-  /* background-color: aqua; */
 }
+
 /* Стилизируем header */
 .header {
   background-color: var(--tertiary-text-color);
+  padding-top: 24px;
 }
 
-/* Логотип */
+/* Логотип */ 
 .logo-web {
   color: var(--accent-color);
   font-family: Raleway;
@@ -54,7 +58,9 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
+  padding-bottom: 25px;
+  display: inline-block;
+  }
 .logo-studio-head {
   color: #000000;
   font-family: Raleway;
@@ -62,110 +68,175 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
+  }
+
 /* Элементы навигации */
-.nav {
+.nav-item {
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
-}
-.nav-item {
   color: var(--secondary-text-color);
-}
+  }
+
 .header-contacts .mail,
 .header-contacts .phone {
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
   color: var(--primary-text-color);
 }
+
 .nav-item:hover,
 .nav-item:focus {
   color: var(--accent-color);
 }
+
 .header-contacts .mail:hover,
 .header-contacts .mail:focus,
 .header-contacts .phone:hover,
 .header-contacts .phone:focus {
   color: var(--accent-color);
 }
+
 .nav-item .link.current {
   color: var(--accent-color);
 }
+
 /* Герой */
 .hero {
   background-color: #2f303a;
+  text-align: center;
+  margin-bottom: 94px;
+  width: 1600px;
+  height: 600px;
+  padding-top: 200px;
+  padding-bottom: 200px;
 }
+
 .hero-title {
   color: var(--tertiary-text-color);
   font-weight: 900;
   font-size: 44px;
-  line-height: 1.36;
-  text-align: center;
+  line-height: 1.36;  
   letter-spacing: 0.06em;
   text-transform: uppercase;
+  margin-top: 0px;
+  margin-bottom: 30px;
 }
+
 .hero-button {
-  background-color: var(--accent-color);
-  color: var(--tertiary-text-color);
   display: inline-block;
   padding: 10px 32px;
+  background-color: var(--accent-color);
+  color: var(--tertiary-text-color);
   font-weight: 700;
   font-size: 16px;
   line-height: 1.88;
   cursor: pointer;
-  align-items: center;
+  border: 1px solid transparent;
   text-align: center;
   letter-spacing: 0.06em;
-  border-radius: 4px;
-  border: 0;
   min-width: 200px;
-}
-/* Особенности и чем мы занимаемся*/
+  height: 50px;
+  border-radius: 4px;
+  }
 
-.fetures-title {
+/* Особенности */
+.features {
+  margin-bottom: 94px;
+}
+.features-list-title{
+  margin-top: 0px;
+  margin-bottom: 10px;
+}
+.features-title {
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 .features-item {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
-.what-are-we-doing-title,
+/* Чем мы занимаемся */
+.what-are-we-doing {
+  text-align: center;
+  margin-bottom: 94px;
+}
+.what-are-we-doing-title {
+  color: var(--secondary-text-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-top: 0px;
+  margin-bottom: 50px;
+  }
+
+  /* Наша команда */
+  .our-team {
+    text-align: center;
+    background-color: #f5f4fa;
+    padding-bottom: 90px; 
+  }
 .our-team-title {
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 36px;
   line-height: 1.17;
   letter-spacing: 0.03em;
-}
-/* Наша команда */
-.our-team {
-  background-color: #f5f4fa;
+  padding-top: 94px;
+  padding-bottom: 50px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .our-team-name {
   background-color: var(--tertiary-text-color);
   color: var(--secondary-text-color);
   font-weight: 500;
   font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
+  line-height: 1.19;  
   letter-spacing: 0.03em;
+  padding-top: 30px;
+  padding-bottom: 10px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 .our-team-spec {
   background-color: var(--tertiary-text-color);
   font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
+  line-height: 1.19;  
   letter-spacing: 0.03em;
+  padding-bottom: 30px;
+  margin-top: 0px;
+  margin-bottom: 0px;
 }
 
 /* стилизируем portfolio.html */
+
+.portfolio-title{
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 /* кнопки фильтров */
+button {
+  font: inherit;
+}
+
 .filter-button {
+  min-width: 73px;
+  height: 38px;
   cursor: pointer;
   font-weight: 500;
   font-size: 16px;
@@ -176,8 +247,8 @@ body {
   background: #f5f4fa;
   border: 0;
   border-radius: 4px;
-  color: var(--secondary-text-color);
 }
+
 .filter-button:hover,
 .filter-button:focus {
   color: var(--tertiary-text-color);
@@ -186,10 +257,31 @@ body {
     0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
+/* проэкты */
+.our-project-name {
+  color: var(--secondary-text-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
+.our-project-id {
+  font-size: 16px;
+  line-height: 1.89;
+  letter-spacing: 0.03em;
+  margin-top: 0px;
+  margin-bottom: 0px;
+}
+
 /* Подвал */
 .footer {
   background-color: #2f303a;
+  padding-top: 60px;
 }
+
 .logo-studio-foot {
   color: var(--tertiary-text-color);
   font-family: "Raleway";
@@ -197,23 +289,26 @@ body {
   font-size: 26px;
   line-height: 1.19;
   letter-spacing: 0.03em;
-}
+  padding-top: 60px;
+  }
+
 .adress {
   color: var(--tertiary-text-color);
   font-style: normal;
-
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
+  padding-top: 20px;
 }
+
 .footer-contacts .mail,
 .footer-contacts .phone {
-  font-style: normal;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
 }
+
 .footer-contacts .mail:hover,
 .footer-contacts .mail:focus,
 .footer-contacts .phone:hover,
