--- a/css/style.css
+++ b/css/style.css
@@ -278,9 +278,16 @@ body {
 /* кнопки фильтров */
 button {
   font: inherit;
+  
+}
+.filter-buttons{
+  display: flex;  
+  padding-bottom: 50px;
+  padding-top: 94px;
+  justify-content: center;
 }
 
-.filter-button {
+.filter-button {   
   min-width: 73px;
   height: 38px;
   cursor: pointer;
@@ -291,8 +298,12 @@ button {
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
   background: #f5f4fa;
-  border: 0;
   border-radius: 4px;
+  border: 0;
+  /* margin-right: 8px;   */
+}
+.filter-buttons .item:not(:last-child){
+  margin-right: 8px;
 }
 
 .filter-button:hover,
@@ -304,23 +315,48 @@ button {
 }
 
 /* проэкты */
+.our-projects {
+  display: flex;
+  flex-wrap: wrap;
+}
+.our-projects .item {
+  width: calc((100% - 2 * 30px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  /* border: 1px solid #EEEEEE;  */
+}
+  .our-projects .item:nth-child(3n) {
+  margin-right: 0px;
+}
+ .our-projects .item:nth-last-child(-n+3){
+  margin-bottom: 0px;
+}
+.project-sign{
+display: flex;
+flex-direction: column;
+padding-left: 24px;
+border-right: 1px solid #EEEEEE;
+border-bottom: 1px solid #EEEEEE;
+border-left: 1px solid #EEEEEE;
+}
 .our-project-name {
+  margin-top: 0px;
+  margin-bottom: 0px;
+  padding-top: 24px;
   color: var(--secondary-text-color);
   font-weight: 700;
   font-size: 18px;
   line-height: 2;
-  letter-spacing: 0.06em;
+  letter-spacing: 0.06em;  
+}
+.our-project-id {
   margin-top: 0px;
   margin-bottom: 0px;
-}
-
-.our-project-id {
+  padding-bottom: 20px;
   font-size: 16px;
   line-height: 1.89;
   letter-spacing: 0.03em;
-  margin-top: 0px;
-  margin-bottom: 0px;
-}
+  }
 
 /* Подвал */
 .footer {
