--- a/css/style.css
+++ b/css/style.css
@@ -77,8 +77,7 @@ body {
   
 /* Элементы навигации */
 .nav-item {
-  display: flex;
-  
+  display: flex;  
   font-weight: 500;
   font-size: 14px;
   line-height: 1.14;
@@ -382,7 +381,7 @@ border-left: 1px solid #EEEEEE;
   line-height: 1.19;
   letter-spacing: 0.03em;
   }
-
+    
 .adress {
   color: var(--tertiary-text-color);
   font-style: normal;
@@ -392,6 +391,13 @@ border-left: 1px solid #EEEEEE;
   margin-top: 20px;
   margin-bottom: 9px;
 }
+.footer-contacts{
+  display: flex;
+  flex-direction: column;
+  }
+.mail{
+  margin-bottom: 9px;
+}
 
 .footer-contacts .mail,
 .footer-contacts .phone {
@@ -399,7 +405,7 @@ border-left: 1px solid #EEEEEE;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: rgba(255, 255, 255, 0.6);
-}
+  }
 
 .footer-contacts .mail:hover,
 .footer-contacts .mail:focus,
